<package format="2">
  <name>cob_manipulation</name>
  <version>0.6.4</version>
  <description>The cob_manipulation stack includes packages that provide manipulation capabilities for Care-O-bot.</description>

  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_manipulation/</url>
  <url type="bugtracker">https://github.com/ipa320/cob_manipulation/issues</url>
  <url type="repository">https://github.com/ipa320/cob_manipulation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_collision_monitor</exec_depend>
  <exec_depend>cob_grasp_generation</exec_depend>
  <exec_depend>cob_lookat_action</exec_depend>
  <exec_depend>cob_moveit_bringup</exec_depend>
  <exec_depend>cob_moveit_interface</exec_depend>
  <exec_depend>cob_obstacle_distance_moveit</exec_depend>
  <exec_depend>cob_pick_place_action</exec_depend>

 <export>
  <metapackage/>
 </export>
</package>
