<?xml version="1.0"?>
<package format="2">
  <name>cob_manipulation_msgs</name>
  <version>0.7.5</version>
  <description>Messages for cob_manipulation</description>

  <license>BSD</license>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <author email="felixmessmer@gmail.com">Felix Messmer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>moveit_msgs</depend>

</package>
