<package>
  <name>cob_mmcontroller</name>
  <version>0.5.0</version>
  <description>
     cob_mmcontroller
  </description>
  <author email="aub@ipa.fhg.de">Alexander Bubeck</author>
  <maintainer email="aub@ipa.fhg.de">Alexander Bubeck</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_manipulation/</url>
  <url type="bugtracker">https://github.com/ipa320/cob_manipulation/issues</url>
  <url type="repository">https://github.com/ipa320/cob_manipulation</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <!--build_depend>kinematics_msgs</build_depend-->
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <!--build_depend>kdl</build_depend-->
  <build_depend>kdl_parser</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cob_srvs</build_depend>
  <build_depend>brics_actuator</build_depend>
  <!--build_depend>articulation_msgs</build_depend-->
  
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <!--run_depend>kinematics_msgs</run_depend-->
  <run_depend>visualization_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <!--run_depend>kdl</run_depend-->
  <run_depend>kdl_parser</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>cob_srvs</run_depend>
  <run_depend>brics_actuator</run_depend>
  <!--run_depend>articulation_msgs</run_depend-->



  <export>
      <!--moveit_core plugin="${prefix}/ikfast/plugins.xml" /--> 
  </export>

  
</package>
