<?xml version="1.0"?>
<package format="2">
    <name>cob_obstacle_distance_moveit</name>
    <version>0.7.1</version>
    <description>This package provides nodes for calculating the minimal distance to robot links, obstacles and octomap using MoveIt!'s PlanningSceneMonitor</description>

    <author email="koellsch86@googlemail.com">Florian Koehler</author>
    <author email="fxm@ipa.fhg.de">Felix Messmer</author>
    <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>boost</depend>
    <depend>cob_control_msgs</depend>
    <depend>cob_srvs</depend>
    <depend>eigen_conversions</depend>
    <depend>geometric_shapes</depend>
    <depend>geometry_msgs</depend>
    <depend>libfcl-dev</depend>
    <depend>moveit_core</depend>
    <depend>moveit_msgs</depend>
    <depend>moveit_ros_perception</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>pkg-config</depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>tf_conversions</depend>

    <exec_depend>rospy</exec_depend>

</package>
