<package format="2">
  <name>cob_tactiletools</name>
  <version>0.6.1</version>
  <description>
     cob_tactiletools
  </description>
  <author email="aub@ipa.fhg.de">Alexander Bubeck</author>
  <maintainer email="aub@ipa.fhg.de">Alexander Bubeck</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_manipulation/</url>
  <url type="bugtracker">https://github.com/ipa320/cob_manipulation/issues</url>
  <url type="repository">https://github.com/ipa320/cob_manipulation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>schunk_sdh</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

</package>
