<package>
  <name>cob_tray_monitor</name>
  <version>0.6.1</version>
  <description>
     cob_tray_monitor
  </description>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_manipulation/</url>
  <url type="bugtracker">https://github.com/ipa320/cob_manipulation/issues</url>
  <url type="repository">https://github.com/ipa320/cob_manipulation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
